# BRDF

./: CMakeLists.txt  README.md  meson.build
lib/: glad.c  impl.cpp
src/: camera.cpp  camera.h  embeded_shaders.h  glad.h  header_only_impl.cpp  main.cpp  mesh.cpp  mesh.h  pbr.cpp  pbr.h  renderpass.cpp  renderpass.h  shaders.cpp  shaders.h  skybox.cpp  skybox.h
